--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
                 <h3 id="answer-text"></h3>
                 <p class="result-message">Jeśli powiedziałeś to samo - przegrywasz rundę!</p>
             </div>
+            <div id="other-answers-container" class="hidden">
+                <h4>Inne poprawne odpowiedzi:</h4>
+                <ul id="other-answers-list"></ul>
+            </div>
         </div>
 
         <div class="controls">
@@ -28,7 +32,7 @@
         <div id="progress-bar-container">
             <div id="progress-bar"></div>
         </div>
-        <p id="progress-text">Pytanie 0 / 5</p>
+        <p id="progress-text">Pytanie 0 / 50</p>
     </div>
 
     <script src="script.js"></script>
